# datadis_hassio

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  hacs.json  pyproject.toml  setup.cfg
.github/workflows/: pythonpackage.yaml
custom_components/datadis/: __init__.py  manifest.json
custom_components/datadis_integration/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py  strings.json
custom_components/datadis_integration/translations/: es.json
tests/: test_init.py  test_sensor.py
